<?xml version="1.0" encoding="utf-8" ?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
  <PreferenceCategory
    android:title="@string/pref_category_filter_title"
    android:key="paarmann.physikprofil.CategoryFilter" >

      <CheckBoxPreference
        android:key="paarmann.physikprofil.FilterSubjects"
        android:title="@string/pref_filter"
        android:summary="@string/pref_filter_summary"
        android:defaultValue="false" />

      <EditTextPreference
        android:key="paarmann.physikprofil.ChosenSubjects"
        android:title="@string/pref_subjects"
        android:summary="@string/pref_subjects_summary"
        android:defaultValue="@string/pref_subjects_default" />

  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/pref_category_automatic_reminders_title"
    android:key="paarmann.physikprofil.CategoryAutomaticReminders" >

    <CheckBoxPreference
      android:key="paarmann.physikprofil.AutomaticUpdates"
      android:title="@string/pref_autoupdates"
      android:summary="@string/pref_autoupdates_summary"
      android:defaultValue="false" />

    <CheckBoxPreference
      android:key="paarmann.physikprofil.AutomaticReminders"
      android:title="@string/pref_autoreminders"
      android:summary="@string/pref_autoreminders_summary"
      android:defaultValue="false" />

     <paarmann.physikprofil.TimePreference
      android:key="paarmann.physikprofil.ReminderTime"
      android:title="@string/pref_remindertime"
      android:summary="@string/pref_remindertime_summary"
      android:defaultValue="1420290000000" />

  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/pref_category_data_usage"
    android:key="paarmann.physikprofil.CategoryDataUsage" >

    <CheckBoxPreference
      android:key="paarmann.physikprofil.UseMobileData"
      android:title="@string/pref_mobile_data"
      android:summary="@string/pref_mobile_data_summary"
      android:defaultValue="true" />

  </PreferenceCategory>

</PreferenceScreen>
