<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabHost" android:layout_weight="0.1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/tabHA"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:weightSum="1">


                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent">
                        <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/allHomework"
                                android:id="@+id/btnAllHomework"
                                android:layout_gravity="center_horizontal"
                            android:onClick="onBtnAllHomeworkClick" />
                        <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/pickDate"
                                android:id="@+id/btnPickDate"
                                android:layout_gravity="center_horizontal"
                                android:onClick="onBtnPickDateClick"/>
                        <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tomorrow"
                                android:id="@+id/btnTomorrow"
                                android:layout_gravity="center_horizontal"
                                android:onClick="onBtnTomorrowClick"/>
                        <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/afterTomorrow"
                                android:id="@+id/btnAfterTomorrow"
                                android:layout_gravity="center_horizontal"
                                android:onClick="onBtnAfterTomorrowClick"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabDates"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/dates_unavailable"/>

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.75" android:visibility="visible">
        <ProgressBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar2" android:layout_weight="0.5"
                android:visibility="visible"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/updating"
                android:id="@+id/txtUpdating" android:layout_weight="0.4"
                android:visibility="visible"/>
    </LinearLayout>


</LinearLayout>
